<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.caramel</groupId>
    <artifactId>juniperbot</artifactId>
    <version>5.x-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>JuniperBot</name>
    <description>JuniperBot Discord Bot</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.0.M3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <main.basedir>${project.basedir}</main.basedir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven-compiler.version>3.8.0</maven-compiler.version>
        <java.version>10</java.version>

        <!-- Common Properties -->
        <lombok.version>1.18.2</lombok.version>
        <json.version>20160810</json.version>
        <commons-io.version>2.5</commons-io.version>
        <commons-collections4.version>4.1</commons-collections4.version>
        <commons-validator.version>1.6</commons-validator.version>
        <guava.version>18.0</guava.version>
        <postgresql.version>42.2.5</postgresql.version>
        <metrics-spring.version>3.1.3</metrics-spring.version>
        <program-jb.version>1.0.13</program-jb.version>
        <gson.version>2.8.1</gson.version>
        <joda-money.version>0.12</joda-money.version>
        <prettytime.version>4.0.1.Final</prettytime.version>
        <jsoup.version>1.11.2</jsoup.version>
        <mapstruct.version>1.2.0.Final</mapstruct.version>
        <opencv.version>3.2.0</opencv.version>
        <sentry.version>1.7.9</sentry.version>
        <okhttp.version>3.11.0</okhttp.version>

        <!-- Integration Properties -->
        <JDA.version>3.8.1_437</JDA.version>
        <jda-nas.version>1.0.6</jda-nas.version>
        <lavaplayer.version>1.3.7-jb</lavaplayer.version>
        <lavalink.version>125b074065</lavalink.version>
        <google-api-services-youtube.version>v3-rev205-1.25.0</google-api-services-youtube.version>
        <jwbf.version>4.0.0-SNAPSHOT</jwbf.version>
        <wikitext.version>3.1.6</wikitext.version>
        <vk.sdk.version>0.5.8</vk.sdk.version>
        <twitch4j.version>v0.12.0</twitch4j.version>

    </properties>

    <repositories>
        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>http://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <modules>
        <module>jb-core</module>
        <module>modules/jb-module-audio</module>
        <module>modules/jb-module-custom</module>
        <module>modules/jb-module-reminder</module>
        <module>modules/jb-module-misc</module>
        <module>modules/jb-module-social</module>
        <module>modules/jb-module-welcome</module>
        <module>modules/jb-module-wikifur</module>
        <module>modules/jb-module-ranking</module>
        <module>modules/jb-module-groovy</module>
        <module>modules/jb-module-info</module>
        <module>modules/jb-module-steam</module>
        <module>modules/jb-module-mafia</module>
        <module>modules/jb-module-aiml</module>
        <module>modules/jb-module-full</module>
        <module>jb-web</module>
    </modules>

</project>